# Input-Processor

./: .dockerignore  Dockerfile  Dockerfile.monitor  README.md  adb_reverse.txt  docker-compose.yml  gps_processor.py  mqtt_monitor.py  pyproject.toml  requirements.txt  rois.json  run_yolo.sh  simulate_gps_users.py  test_gps.py
.github/workflows/: deploy.yml
config/: camera_config.json
docs/: CALIBRATION.md  README_CAMERA.md
model/: zip_n_model_quant.onnx
mosquitto/config/: mosquitto.conf
scripts/: monitor.sh  run.sh  run_density.sh
src/: camera_calibration.py  camera_mqtt_publisher.py  crowd_counter.py  gps_processor.py  image.py  main.py  schemas.py
tests/: debug_grid.py  examine_model.py  test_hybrid.py  test_real_coords.py  test_tiled_hybrid.py  test_tiling.py  test_yolo.py
