[project]
name = "fan-app"
version = "0.1.0"
description = "This is an example on how you can use the zip model"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=2.4.2",
    "onnxruntime>=1.24.1",
    "opencv-python>=4.13.0.92",
    "typer>=0.9.0",
    "paho-mqtt>=1.6.1",
"pyproj>=3.6.1",
    "pydantic>=2.4.2",
    "ultralytics>=8.3.0",
]
